# icfp2011

./: .gitignore  build.sh  ltg.lkshw  runMatch.bat  runOnSim.bat  sim_test.sh  skip.rb  slow_test.sh  test.sh  test_match.sh
alt_simulator/: brains.rb  simulator.rb
brain/: .gitignore  Makefile  Parser.hs  Planner.hs  PlayerModel.hs  Statements.hs  Strategy.hs  brain.cabal  braindriver.hs  braintester.hs  genTestCases.hs
driver/: Makefile  drive.rb  drive_spec.rb
ruby_experiments/: number_costs.rb
simulator/: .gitignore  AltPlanner.hs  Card.hs  CardBehavior.hs  Function.hs  GameState.hs  KillerOf255.hs  Makefile  Move.hs  MoveStep.hs  MoveWriter.hs  Parser.hs  Planner.hs  PlayerModel.hs  SimpleBuilder.hs  Simulator.hs  Slots.hs  Spells.hs  Statements.hs  Strategy.hs  Tactics.hs  Translator.hs  Util.hs  Value.hs  braindriver.hs  braintester.hs  genTestCases.hs  simdriver.hs  simtester.cabal  simtester.hs  simulator.cabal  spelltester.hs
ski_brute/: combinators.bak  combinators.stuck
vmconfig/: eat5.sh  icfp-apt-list.txt  icfp-package-list.txt  install.sh  our-packages.txt  verify.sh
