name: simulator
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: HUnit -any, HUnit -any, HUnit -any, HUnit -any,
               HUnit -any, HUnit -any, HUnit -any, HUnit -any, HUnit -any,
               HUnit -any, HUnit -any, HUnit -any, HUnit -any, HUnit -any,
               HUnit -any, HUnit -any, array -any, array -any, array -any,
               array -any, array -any, array -any, array -any, array -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any, base -any, base -any,
               base -any, base -any, base -any, base -any
stability:
homepage:
package-url:
bug-reports:
synopsis:
description: .
category:
author:
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
 
executable: simdriver
main-is: simdriver.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: .
other-modules: Value Simulator Move GameState CardBehavior Card
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options:
 
executable: simtester
main-is: simtester.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: .
other-modules: Value Simulator Move GameState CardBehavior Card
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: